# AmadeusWeb

./: .env.example  .gitignore  .replit  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  requirements.txt
artifacts/api-server/: package.json  server.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/python/: main.py
artifacts/api-server/python/lib/: amadeus_local.db  amadeus_local.db-journal  db.py  gemini.py  midi_gen.py
artifacts/api-server/python/models/: Compose10k.json  classifier_model.py  composer_engine.py
artifacts/api-server/python/routers/: genres.py  jobs.py  stats.py  upload.py  websocket.py
artifacts/midi-ml/: index.html  package.json  vite.config.ts
artifacts/midi-ml/.replit-artifact/: artifact.toml
artifacts/midi-ml/src/: App.tsx  index.css
artifacts/midi-ml/src/components/: architecture-modal.tsx  debug-terminal.tsx  job-status-badge.tsx  layout.tsx  midi-file-upload.tsx  midi-player.tsx  midi-visualizer.tsx
artifacts/midi-ml/src/hooks/: use-local-storage.ts
artifacts/midi-ml/src/pages/: evaluate.tsx  extend.tsx  home.tsx  jobs.tsx  live.tsx  transform.tsx
attached_assets/: Pasted-You-are-acting-as-a-Full-Stack-Software-Architect-We-ar_1778603069150.txt
lib/api-spec/: fix-zod-index.mjs  openapi.yaml
lib/db/src/schema/: genres.ts  index.ts  jobs.ts
